--- a/TP1/Echec/grille.html
+++ b/TP1/Echec/grille.html
@@ -1,5 +1,7 @@
 <?xml version="1.0" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN"
+"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11-flat-20030114.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="application/xml+xhtml; charset=utf-8" />
@@ -9,24 +11,13 @@
 		<title>Grille échiquier</title>
 	</head>
 	<body>
-		<script language="JavaScript">
-		var bool=false;
-		for(var l=0; l<8; l++)
-		{
-			for(var c=0; c<8; c++)
-			{
-				alert(50*l+', '+c + ', ' + bool);
-				if (bool) 
-				{
-					document.write('<rect width="50" height="50" x="'+50*l+'" y="'+50*c+'" style="fill: grey"></rect>');
-					bool = false;
-				}
-				else
-				{
-					bool = true
-				}
-			}
-		}			
-		</script>	
+		<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
+		</svg>
+		<script src="echec.js" ></script>
+		
+		<script>
+			var osiris = document.getElementsByTagName("svg")[0]; //Recupere le noeud SVG
+			cree_echiquier(osiris);
+		</script>
 	</body>
 </html>
