--- a/TP1/Echec/grille.html
+++ b/TP1/Echec/grille.html
@@ -11,7 +11,7 @@
 		<title>Grille échiquier</title>
 	</head>
 	<body>
-		<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
+		<svg xmlns="http://www.w3.org/2000/svg" width="700" height="700">
 		</svg>
 		<script src="echec.js" ></script>
 		
