css et reposition des pieces echec

--- a/TP1/CV/CV.html
+++ b/TP1/CV/CV.html
@@ -34,7 +34,7 @@ USA<br />
 <b>Mel :</b>georges@nespresso.com
 </div>
 <!-- A faire : redimensionner et positionner cette image de facon absolue sur la page -->
-<img src="http://media.melty.fr/media--image-184112-article-ajust_930.jpg" alt="George boit un cafe"/>
+<img src="http://media.melty.fr/media--image-184112-article-ajust_930.jpg" alt="George boit un cafe" style="position: absolute; ; width: 300px; height: 300px"/>
 </div>
 
 <h2 id="formation">Formation</h2>
@@ -50,7 +50,7 @@ USA<br />
 <h2 id = "experience">Experience</h2>
 <!--A faire : structurer le tableau pour mettre en forme la ligne de titre-->
 <table>
-<tr><td>Date</td><td>Emploi occupe</td><td>Entreprise</td></tr>
+<tr><td><b>Date</b></td><td><b>Emploi occupe</b></td><td><b>Entreprise</b></td></tr>
 <tr><td>1997</td><td>Batman</td><td>Police de Gotham City</td></tr>
 <tr><td>2000</td><td>Medecin de nuit</td><td>Urgences, New York</td></tr>
 <tr><td>2002</td><td>Psychologue astronaute</td><td>NASA</td></tr>
