--- a/TP1/Echec/grille.html
+++ b/TP1/Echec/grille.html
@@ -1,23 +1,28 @@
 <?xml version="1.0" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN"
-"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11-flat-20030114.dtd">
+<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11-flat-20030114.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="application/xml+xhtml; charset=utf-8" />
 		<meta http-equiv="Content-Language" content="fr" />
 		<meta name="author" content="Arnaud DUHAMEL" />
 		<meta name="description" content="MIF13 TP client" />
+		<script src="echec.js" type="text/javascript"></script>
 		<title>Grille échiquier</title>
 	</head>
-	<body>
+	<body id="body">
+	
+		<div>Afficher la grille de l'échiquier : <input type="button" onClick="cree_echiquier(osiris)" value="Afficher" /></div>
+		<div>Afficher les pièces de l'échiquier : <input type="button" onClick="generer_pions(osiris)" value="Afficher" /></div>
+		
 		<svg xmlns="http://www.w3.org/2000/svg" width="700" height="700">
 		</svg>
-		<script src="echec.js" ></script>
 		
 		<script>
 			var osiris = document.getElementsByTagName("svg")[0]; //Recupere le noeud SVG
-			cree_echiquier(osiris);
 		</script>
+		
+		
+		
 	</body>
 </html>
