--- a/TP3/src/main/webapp/saisie.html
+++ b/TP3/src/main/webapp/saisie.html
@@ -10,5 +10,8 @@ and open the template in the editor.
     </head>
     <body>
         <div>TODO write content</div>
+        <form method="POST" action="">
+            <label for="l_message" >Message</label><input id="l_message" type="text" />
+        </form>
     </body>
 </html>
