--- a/TP3/src/main/webapp/index.html
+++ b/TP3/src/main/webapp/index.html
@@ -9,6 +9,13 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <div>TODO write content</div>
-    </body>
+      <form method="POST" action="init" >
+          <h1>Bienvenue dans mon appli de chat</h1>
+          <br/>
+          Entrez votre pseudo pour vous connecter
+          <br/><br/>
+          <input id="nom" name="nom" type="text" />
+          <input type="submit" value="Connexion" />
+      </form>
+  </body>
 </html>
