premier tchat operationnel

--- a/TP3/src/main/webapp/frames.html
+++ b/TP3/src/main/webapp/frames.html
@@ -1,10 +1,8 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN"
+        "http://www.w3.org/TR/html4/frameset.dtd">
+
 <html>
-    <head>
+  <head>
     <title>ChatRoom</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
@@ -13,4 +11,5 @@ and open the template in the editor.
       <frame src="messages.jsp" name="affichage">
         <frame src="saisie.html" name="saisie">
   </frameset>
+
 </html>
