--- a/TP3/src/main/webapp/deconnexion.html
+++ b/TP3/src/main/webapp/deconnexion.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
   <body>
-    Merci pour votre connexion, et au revoir !
+    Deconnexion réussie !
   </body>
 </html>
 
