--- a/TP3/src/main/webapp/frames.html
+++ b/TP3/src/main/webapp/frames.html
@@ -4,6 +4,7 @@
   <head>
     <title>ChatRoom</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
   </head>
  
   <frameset rows="75%,25%">
