--- a/TP3/src/main/webapp/index.html
+++ b/TP3/src/main/webapp/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Mon appli de chat</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
     </head>
     <body>
       <form method="POST" action="init" >
