--- a/TP3/src/main/webapp/deconnexion.html
+++ b/TP3/src/main/webapp/deconnexion.html
@@ -3,6 +3,7 @@
   <head>
     <title>Au revoir</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   </head>
   <body>
     Deconnexion réussie !
